//------------------------------------------------------------------------------
// {C} Copyright 2017 Pensando Systems Inc. All rights reserved
//
// protobuf specification for tunnel
//------------------------------------------------------------------------------

syntax = "proto3";
package netproto;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";


// ---------------------------- Tunnel API ----------------------------
// Tunnel controller api
service TunnelApiV1 {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "Tunnel",
        Method: ["list", "post", "delete", "put"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.Namespace}/{ObjectMeta.Name}",
        Prefix: "api/tunnels"
    };

//    rpc GetTunnel (api.ObjectMeta) returns (Tunnel) {};
//    rpc ListTunnels (api.ObjectMeta) returns (TunnelList) {};
//    rpc WatchTunnels (api.ObjectMeta) returns (stream TunnelEventList) {};
}

// Tunnel object
message Tunnel {
    api.TypeMeta    TypeMeta    = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta  ObjectMeta  = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    TunnelSpec      Spec        = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    TunnelStatus    Status      = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}

// TunnelSpec captures all the tunnel level configuration
message TunnelSpec {
    enum Encap {
        NONE                = 0;
        VXLAN               = 1;
        GRE                 = 2;
    }
    // VrfName specifies the name of the VRF that the current Tunnel belongs to
    string VrfName      = 1 [(gogoproto.jsontag) = "vrf-name,omitempty"];

    // Overlay Tunnel Type. Required. Only VXLAN is currently supported
    string Type         = 2 [(venice.check) = "StrEnum(TunnelSpec.Encap)",
                             (gogoproto.jsontag) = "type,omitempty"];

    // AdminStatus of the overlay tunnel.
    string AdminStatus  = 3 [(venice.check) = "StrEnum(TunnelStatus.IFStatus)",
                             (gogoproto.jsontag) = "admin-status,omitempty"];
    // Local TEP IP Address
    string Src          = 4 [(gogoproto.jsontag) = "source,omitempty"];

    // Remote TEP IP Address
    string Dst          = 5 [(gogoproto.jsontag) = "destination,omitempty"];
}

// Tunnel Status
message TunnelStatus {
    enum IFStatus {
        NONE              = 0;
        UP                = 1;
        DOWN              = 2;
    }
    string OperStatus     = 1 [(venice.check) = "StrEnum(TunnelStatus.IFStatus)",
                               (gogoproto.jsontag) = "oper-status,omitempty"];

    // TunnelID in the datapath
    uint64 TunnelID       = 2 [(gogoproto.jsontag) = "id,omitempty"];
}

message TunnelList {
    repeated Tunnel tunnels  = 1;
}

// tunnel watch event
message TunnelEvent {
    api.EventType   EventType   = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    Tunnel          Tunnel      = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "tunnel,omitempty"];
}

// tunnel watch events batched
message TunnelEventList {
    repeated TunnelEvent TunnelEvents  = 1;
}
